# mns

./: .gitignore  README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
app/: layout.tsx  page.tsx  providers.tsx
lib/: constants.ts  createGame.ts  endGame.ts  findGame.ts  foreignProcedureInvocation.ts  getAccountId.ts  makeMove.ts  multiSendWithDelegatedProver.ts  nameService.ts  readBoard.ts  unauthenticatedNoteTransfer.ts  utils.ts
lib/contracts/: tic_tac_toe_code.ts
lib/notes/: end_game_code.ts  make_a_move_code.ts
masm/accounts/: name_service.masm
masm/scripts/: deploy_name_service.masm
mns/: Cargo.toml
