[package]
name = "mns"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1", features = ["backtrace", "std"] }
miden-client = { version = "0.11.4", features = ["testing", "tonic", "sqlite"] }
miden-lib = { version = "0.11.2", default-features = false }
miden-objects = { version = "0.11.2", default-features = false, features = ["testing"] }
miden-crypto = { version = "0.15.5", features = ["executable"] }
miden-assembly = "0.17.0"
rand = { version = "0.9" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
tokio = { version = "1.40", features = ["rt-multi-thread", "net", "macros", "fs"] }
rand_chacha = "0.9.0"
